modify the analyze struct

--- a/web/views/websockets.html
+++ b/web/views/websockets.html
@@ -6,7 +6,7 @@
 	var scheme = document.location.protocol == "https:" ? "wss" : "ws";
 	var port = document.location.port ? (":" + document.location.port) : "";
 	// see app.Get("/echo", ws.Handler()) on main.go
-	var wsURL = scheme + "://" + document.location.hostname + port+"/echo"; 
+	var wsURL = scheme + "://" + document.location.hostname + port+"/websocket"; 
 	var input = document.getElementById("input");
 	var output = document.getElementById("output");
 	// Ws comes from the auto-served '/iris-ws.js'
