--- a/web/views/websockets.html
+++ b/web/views/websockets.html
@@ -1,5 +1,5 @@
-<input id="input" type="text" />
-<button onclick="send()">Send</button>
+<!-- <input id="input" type="text" /> -->
+<!-- <button onclick="send()">Send</button> -->
 <pre id="output"></pre>
 <script src="/iris-ws.js"></script>
 <script>
